--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <div class="container">
-        <nav>
-            <div class="logo">
-                <span>Casa Velha</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="livro.html">Livro</a></li>
-                <li><a href="personagens.html">Personagens</a></li>
-                <li><a href="autor.html">Autor</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+    <nav>
+        <div class="logo">
+            <span>Casa Velha</span>
+        </div>
+        <div class="hamburger" id="hamburger">&#9776;</div>
+        <ul id="menu">
+            <li><a href="index.html">Início</a></li>
+            <li><a href="livro.html">Livro</a></li>
+            <li><a href="personagens.html">Personagens</a></li>
+            <li><a href="autor.html">Autor</a></li>
+        </ul>
+    </nav>
+</div>
     </div>
 
     <main>
@@ -52,6 +55,23 @@ e para a fragilidade das aparências em uma sociedade <br> conservadora.</p>
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--topo-do-site-->
+        <div class="hamburger" id="hamburger">&#9776;</div>
     </main>
+    <script>
+    const hamburger = document.getElementById('hamburger');
+    const menu = document.getElementById('menu');
+
+    hamburger.addEventListener('click', () => {
+        menu.classList.toggle('show');
+    });
+
+    // Fecha o menu ao clicar em um link
+    document.querySelectorAll('#menu a').forEach(link => {
+        link.addEventListener('click', () => {
+            menu.classList.remove('show');
+        });
+    });
+</script>
+
 </body>
 </html>
